[package]
edition = "2021"
name = "napi-rs_ssh"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1"
anyhow = "1"
dirs = "6"
napi = { version = "3.0.0-alpha", default-features = false, features = [
  "async",
  "error_anyhow",
] }
napi-derive = { version = "3.0.0-alpha" }
russh = { version = "0.46", features = ["vendored-openssl"] }
russh-keys = { version = "0.46", features = ["vendored-openssl"] }
tokio = { version = "1", features = ["full"] }

[target.'cfg(windows)'.dependencies]
pageant = { version = "0.0.1-beta.3" }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
