[package]
edition = "2021"
name = "napi-rs_ssh"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1"
anyhow = "1"
base64 = "0.22"
dirs = "6"
napi = { version = "3", default-features = false, features = [
  "async",
  "error_anyhow",
] }
napi-derive = { version = "3" }
rand = "0.10"
russh = { version = "0.60" }
tokio = { version = "1", features = ["full"] }

[target.'cfg(windows)'.dependencies]
pageant = { version = "0.2" }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[patch.crates-io]
# Pin elliptic curve crates to compatible versions to avoid trait bound issues
# See: https://github.com/Brooooooklyn/ssh/actions/runs/24563129727/job/71816496711
primeorder = { git = "https://github.com/RustCrypto/elliptic-curves", rev = "primeorder/v0.14.0-rc.9" }
primefield = { git = "https://github.com/RustCrypto/elliptic-curves", rev = "primefield/v0.14.0-rc.9" }
